# ML-dashboard

./: .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
api/: app.py  config.py  run.py
api/routes/: health.py  predict.py
dashboard/: index.html
dashboard/css/: styles.css
dashboard/js/: app.js  navigation.js
dashboard/js/components/: DataTable.js  ServiceCard.js
dashboard/js/panels/: analytics.js  dataset.js  featurestore.js  home.js  onlinestore.js  pipelines.js  predict.js
dashboard/js/utils/: dataLoader.js
dashboard/server/: server.py
data/raw/: diabetes.csv
docker/: README.md
docker/airflow/: docker-compose.yaml  requirements.txt
docker/airflow/dags/: materialize_dag.py  process_transactions_dag.py
docker/airflow/dags/config/: pipeline_config.yaml
docker/mlflow/: Dockerfile  docker-compose.yaml
feature_repo/feature_repo/: feature_store.yaml  features.py
scripts/: __init__.py  materialize.py  prepare_data.py  zenml_pipeline.py  zenml_predict.py
scripts/config/: prediction_config.yaml  train_config.yaml
scripts/prediction/: config.py  model_loader.py  predictor.py  schemas.py
scripts/training/: __init__.py  config.py  data_loader.py  evaluation.py  models.py  schemas.py  visualization.py
tests/: conftest.py  test_evaluation.py  test_models.py  test_predictor.py  test_prepare_data.py  test_schemas.py
